// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagList renders as a span with custom margins 1`] = `
<DocumentFragment>
  .emotion-12 {
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-2 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  padding: 8px 12px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.7142857142857142;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  cursor: default;
}

.emotion-0 svg {
  fill: #2e2e2e;
  color: #2e2e2e;
}

.emotion-0:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-0:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-3 {
  box-sizing: border-box;
  display: inline-block;
  list-style-type: none;
  margin-right: 48px;
  margin-bottom: 4px;
}

.emotion-3:last-child {
  margin-right: 0;
}

<ul
    class="emotion-12"
  >
    <li
      class="emotion-3"
    >
      <div
        class="emotion-2"
        data-testid="tag"
      >
        <div
          class="emotion-1"
        >
          <div
            class="emotion-0"
          >
            first label
          </div>
        </div>
      </div>
    </li>
    <li
      class="emotion-3"
    >
      <div
        class="emotion-2"
        data-testid="tag"
      >
        <div
          class="emotion-1"
        >
          <div
            class="emotion-0"
          >
            second label
          </div>
        </div>
      </div>
    </li>
    <li
      class="emotion-3"
    >
      <div
        class="emotion-2"
        data-testid="tag"
      >
        <div
          class="emotion-1"
        >
          <div
            class="emotion-0"
          >
            third label
          </div>
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`TagList renders as a span with custom size 1`] = `
<DocumentFragment>
  .emotion-3 {
  box-sizing: border-box;
  display: inline-block;
  list-style-type: none;
  margin-right: 4px;
  margin-bottom: 4px;
}

.emotion-3:last-child {
  margin-right: 0;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

.emotion-12 {
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.emotion-2 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 40px;
  padding: 8px 12px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 16px;
  line-height: 1.75;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  cursor: default;
}

.emotion-0:active:not(:disabled) {
  background-color: #f0f0f0;
}

<ul
    class="emotion-12"
  >
    <li
      class="emotion-3"
    >
      <div
        class="emotion-2"
        data-testid="tag"
      >
        <div
          class="emotion-1"
        >
          <div
            class="emotion-0"
          >
            first label
          </div>
        </div>
      </div>
    </li>
    <li
      class="emotion-3"
    >
      <div
        class="emotion-2"
        data-testid="tag"
      >
        <div
          class="emotion-1"
        >
          <div
            class="emotion-0"
          >
            second label
          </div>
        </div>
      </div>
    </li>
    <li
      class="emotion-3"
    >
      <div
        class="emotion-2"
        data-testid="tag"
      >
        <div
          class="emotion-1"
        >
          <div
            class="emotion-0"
          >
            third label
          </div>
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`TagList renders as a span with defaults 1`] = `
<DocumentFragment>
  .emotion-12 {
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-3 {
  box-sizing: border-box;
  display: inline-block;
  list-style-type: none;
  margin-right: 4px;
  margin-bottom: 4px;
}

.emotion-3:last-child {
  margin-right: 0;
}

.emotion-2 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  padding: 8px 12px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.7142857142857142;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  cursor: default;
}

.emotion-0 svg {
  fill: #2e2e2e;
  color: #2e2e2e;
}

.emotion-0:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-0:active:not(:disabled) {
  background-color: #f0f0f0;
}

<ul
    class="emotion-12"
  >
    <li
      class="emotion-3"
    >
      <div
        class="emotion-2"
        data-testid="tag"
      >
        <div
          class="emotion-1"
        >
          <div
            class="emotion-0"
          >
            first label
          </div>
        </div>
      </div>
    </li>
    <li
      class="emotion-3"
    >
      <div
        class="emotion-2"
        data-testid="tag"
      >
        <div
          class="emotion-1"
        >
          <div
            class="emotion-0"
          >
            second label
          </div>
        </div>
      </div>
    </li>
    <li
      class="emotion-3"
    >
      <div
        class="emotion-2"
        data-testid="tag"
      >
        <div
          class="emotion-1"
        >
          <div
            class="emotion-0"
          >
            third label
          </div>
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`TagList renders as an anchor with custom margins 1`] = `
<DocumentFragment>
  .emotion-12 {
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-2 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  padding: 8px 12px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.7142857142857142;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  cursor: default;
}

.emotion-0 svg {
  fill: #2e2e2e;
  color: #2e2e2e;
}

.emotion-0:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-0:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-3 {
  box-sizing: border-box;
  display: inline-block;
  list-style-type: none;
  margin-right: 48px;
  margin-bottom: 4px;
}

.emotion-3:last-child {
  margin-right: 0;
}

<ul
    class="emotion-12"
  >
    <li
      class="emotion-3"
    >
      <a
        class="emotion-2"
        data-testid="tag"
        href="www.url1.com"
      >
        <div
          class="emotion-1"
        >
          <div
            class="emotion-0"
          >
            first label
          </div>
        </div>
      </a>
    </li>
    <li
      class="emotion-3"
    >
      <a
        class="emotion-2"
        data-testid="tag"
        href="www.url2.com"
      >
        <div
          class="emotion-1"
        >
          <div
            class="emotion-0"
          >
            second label
          </div>
        </div>
      </a>
    </li>
    <li
      class="emotion-3"
    >
      <a
        class="emotion-2"
        data-testid="tag"
        href="www.url3.com"
      >
        <div
          class="emotion-1"
        >
          <div
            class="emotion-0"
          >
            third label
          </div>
        </div>
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`TagList renders as an anchor with custom size 1`] = `
<DocumentFragment>
  .emotion-3 {
  box-sizing: border-box;
  display: inline-block;
  list-style-type: none;
  margin-right: 4px;
  margin-bottom: 4px;
}

.emotion-3:last-child {
  margin-right: 0;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

.emotion-12 {
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.emotion-2 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 40px;
  padding: 8px 12px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 16px;
  line-height: 1.75;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  cursor: default;
}

.emotion-0:active:not(:disabled) {
  background-color: #f0f0f0;
}

<ul
    class="emotion-12"
  >
    <li
      class="emotion-3"
    >
      <a
        class="emotion-2"
        data-testid="tag"
        href="www.url1.com"
      >
        <div
          class="emotion-1"
        >
          <div
            class="emotion-0"
          >
            first label
          </div>
        </div>
      </a>
    </li>
    <li
      class="emotion-3"
    >
      <a
        class="emotion-2"
        data-testid="tag"
        href="www.url2.com"
      >
        <div
          class="emotion-1"
        >
          <div
            class="emotion-0"
          >
            second label
          </div>
        </div>
      </a>
    </li>
    <li
      class="emotion-3"
    >
      <a
        class="emotion-2"
        data-testid="tag"
        href="www.url3.com"
      >
        <div
          class="emotion-1"
        >
          <div
            class="emotion-0"
          >
            third label
          </div>
        </div>
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`TagList renders as an anchor with defaults 1`] = `
<DocumentFragment>
  .emotion-12 {
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-3 {
  box-sizing: border-box;
  display: inline-block;
  list-style-type: none;
  margin-right: 4px;
  margin-bottom: 4px;
}

.emotion-3:last-child {
  margin-right: 0;
}

.emotion-2 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  padding: 8px 12px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.7142857142857142;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  cursor: default;
}

.emotion-0 svg {
  fill: #2e2e2e;
  color: #2e2e2e;
}

.emotion-0:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-0:active:not(:disabled) {
  background-color: #f0f0f0;
}

<ul
    class="emotion-12"
  >
    <li
      class="emotion-3"
    >
      <a
        class="emotion-2"
        data-testid="tag"
        href="www.url1.com"
      >
        <div
          class="emotion-1"
        >
          <div
            class="emotion-0"
          >
            first label
          </div>
        </div>
      </a>
    </li>
    <li
      class="emotion-3"
    >
      <a
        class="emotion-2"
        data-testid="tag"
        href="www.url2.com"
      >
        <div
          class="emotion-1"
        >
          <div
            class="emotion-0"
          >
            second label
          </div>
        </div>
      </a>
    </li>
    <li
      class="emotion-3"
    >
      <a
        class="emotion-2"
        data-testid="tag"
        href="www.url3.com"
      >
        <div
          class="emotion-1"
        >
          <div
            class="emotion-0"
          >
            third label
          </div>
        </div>
      </a>
    </li>
  </ul>
</DocumentFragment>
`;
